--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ before_install:
   - go get github.com/mattn/goveralls
 script:
   - ./githooks/pre-commit
-  - go test -cpu=1 -v ./...
+  - go test -cpu=1 -v -covermode=count -coverprofile=coverage.out ./...
   - go test -race -v ./...
-  - $GOPATH/bin/goveralls -service=travis-ci
+  - $GOPATH/bin/goveralls -coverprofile=coverage.out -service=travis-ci
