--- a/note_maps/pubspec.yaml
+++ b/note_maps/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   flutter:
     sdk: flutter
 
+  provider:
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
