--- a/note_maps/pubspec.yaml
+++ b/note_maps/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
     sdk: flutter
 
   provider:
+  fixnum:
+  protobuf:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
