--- a/note_maps/pubspec.yaml
+++ b/note_maps/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   provider:
   fixnum:
   protobuf:
+  flutter_bloc:
+  equatable:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
