--- a/note_maps/pubspec.yaml
+++ b/note_maps/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   protobuf:
   flutter_bloc:
   equatable:
+  flutter_svg: ^0.14.0
+  jdenticon_dart:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
