--- a/note_maps/android/app/src/main/AndroidManifest.xml
+++ b/note_maps/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="note_maps"
+        android:label="Note Maps"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
