Refactor from Bloc to custom Controllers/Providers
This is a significant change to the Dart code as well as to the store/pb
protocol buffers and the request/response types supported by mobileapi.
The goal is to reduce code duplication per type (topic map, topic, name,
occurrence, etc.) while also working toward proper support for mutating
these types.

--- a/note_maps/pubspec.yaml
+++ b/note_maps/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   equatable:
   flutter_svg: ^0.14.0
   jdenticon_dart:
+  dcache: ^0.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
