--- a/note_maps/pubspec.yaml
+++ b/note_maps/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_svg: ^0.14.0
   jdenticon_dart:
   dcache: ^0.3.0
+  flutter_speed_dial: ^1.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
