Silently fail the test for 'pwa'

--- a/js/packages/pwa/package.json
+++ b/js/packages/pwa/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Warning: no test specified.\"",
     "watch": "webpack --config=webpack.development.js --watch",
     "build": "webpack --config=webpack.production.js",
     "precommit": "lint-staged",
