--- a/js/packages/quill-module/package.json
+++ b/js/packages/quill-module/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@note-maps/quill-module",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Note Maps module for Quill",
-  "main": "index.js",
+  "main": "dist/index.js",
   "repository": "https://github.com/google/note-maps",
   "license": "Apache-2.0",
   "scripts": {
@@ -12,10 +12,12 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "husky": "^4.2.5",
+    "mocha": "^7.1.2",
     "polendina": "^1.0.0",
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@note-maps/models": "0.1.0",
     "@types/quill": "^2.0.3",
     "quill": "^1.3.7"
   }
