Split out the delta types and add tests
Strict mode had to be enabled to make the delta code reasonable, and
this required some more changes to other modules.

--- a/js/packages/models/tsconfig.json
+++ b/js/packages/models/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "./src",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "strict": true
   },
   "exclude": [
     "node_modules",
