--- a/js/packages/models/package.json
+++ b/js/packages/models/package.json
@@ -7,10 +7,15 @@
   "license": "Apache-2.0",
   "scripts": {
     "build": "tsc -b tsconfig.json",
-    "test": "ts-mocha -p tsconfig.json src/**/*.spec.ts"
+    "test": "mocha src/**/*.spec.ts"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.11",
+    "chai": "^4.2.0",
     "mocha": "^7.1.2",
     "ts-mocha": "^7.0.0"
+  },
+  "dependencies": {
+    "@types/mocha": "^7.0.2"
   }
 }
