--- a/js/packages/pwa/package.json
+++ b/js/packages/pwa/package.json
@@ -5,10 +5,10 @@
   "private": true,
   "scripts": {
     "test": "echo \"Warning: no test specified.\"",
-    "watch": "webpack --config=webpack.development.js --watch",
-    "build": "webpack --config=webpack.production.js",
-    "precommit": "lint-staged",
-    "fmt": "prettier --write './src/*.js'"
+    "watch": "parcel serve src/index.html",
+    "build-parcel": "parcel build src/index.ts",
+    "build-tsc": "tsc -b ../../tsconfig.json",
+    "build": "yarn build-parcel && yarn build-tsc"
   },
   "author": "Joshua Tacoma <joshua.tacoma@gmail.com>",
   "license": "Apache-2.0",
@@ -16,6 +16,7 @@
     "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.9.5",
+    "@vue/component-compiler-utils": "^3.1.2",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
     "html-webpack-plugin": "^4.2.0",
@@ -23,13 +24,17 @@
     "lint-staged": "^10.1.7",
     "mini-css-extract-plugin": "^0.9.0",
     "prettier": "^2.0.5",
+    "pug": "^2.0.4",
+    "sass": "^1.26.5",
+    "vue-template-compiler": "^2.6.11",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
     "quill": "^1.3.7",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-hot-reload-api": "^2.3.4"
   },
   "lint-staged": {
     "*.js": [
