--- a/js/packages/pwa/package.json
+++ b/js/packages/pwa/package.json
@@ -32,6 +32,7 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "@note-maps/quill-module": "0.1.0",
     "quill": "^1.3.7",
     "vue": "^2.6.11",
     "vue-hot-reload-api": "^2.3.4"
