Move API into "models" as NoteMapsAPI
This also adds fake implementation in the "textile" package.

--- a/js/packages/textile/package.json
+++ b/js/packages/textile/package.json
@@ -18,5 +18,7 @@
     "mocha": "^7.1.2",
     "ts-mocha": "^7.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@note-maps/models": "0.1.0"
+  }
 }
