--- a/js/packages/models/tsconfig.json
+++ b/js/packages/models/tsconfig.json
@@ -3,9 +3,7 @@
   "compilerOptions": {
     "declaration": true,
     "outDir": "./dist",
-    "rootDir": "./src",
-    "resolveJsonModule": true,
-    "strict": true
+    "rootDir": "./src"
   },
   "exclude": [
     "node_modules",
