--- a/js/packages/textile/tsconfig.json
+++ b/js/packages/textile/tsconfig.json
@@ -1,11 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "declaration": true,
     "outDir": "./dist",
-    "rootDir": "./src",
-    "resolveJsonModule": true,
-    "strict": true
+    "rootDir": "./src"
   },
   "exclude": [
     "node_modules",
