--- a/js/tsconfig.json
+++ b/js/tsconfig.json
@@ -1,9 +1,12 @@
 {
   "compilerOptions": {
+    "declaration": true,
     "target": "ES6",
     "esModuleInterop": true,
-    "moduleResolution": "Node",
-    "resolveJsonModule": true
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "module": "es2015",
+    "strict": true
   },
   "exclude": [
     "node_modules",
