Import @types/quill-delta 3.6.3 based on master

--- a/js/lerna.json
+++ b/js/lerna.json
@@ -1,6 +1,9 @@
 {
   "npmClient": "yarn",
-  "packages": ["packages/*"],
+  "packages": [
+    "packages/*",
+    "third_party/@types/*"
+  ],
   "useWorkspaces": true,
   "version": "independent"
 }
