--- a/js/package.json
+++ b/js/package.json
@@ -3,7 +3,8 @@
   "license": "Apache-2.0",
   "private": true,
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "third_party/@types/*"
   ],
   "scripts": {
     "build": "lerna run build",
