--- a/js/packages/quill-module/package.json
+++ b/js/packages/quill-module/package.json
@@ -13,6 +13,8 @@
     "build": "yarn build-parcel && yarn build-tsc"
   },
   "devDependencies": {
+    "@types/quill": "^2.0.3",
+    "@types/quill-delta": "^3.6.3",
     "chai": "^4.2.0",
     "husky": "^4.2.5",
     "mocha": "^7.1.2",
@@ -21,7 +23,6 @@
   },
   "dependencies": {
     "@note-maps/models": "0.1.0",
-    "@types/quill": "^2.0.3",
     "quill": "^1.3.7"
   }
 }
