--- a/js/package.json
+++ b/js/package.json
@@ -3,6 +3,7 @@
   "license": "Apache-2.0",
   "private": true,
   "workspaces": [
+    "app",
     "packages/*",
     "third_party/@types/*"
   ],
@@ -16,6 +17,8 @@
     "@babel/compat-data": "^7.9.6",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
+    "@vue/cli-plugin-typescript": "^4.3.1",
+    "@vue/cli-service": "^4.3.1",
     "eslint": "^6.0.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-standard": "^14.1.1",
