Add 'clean' and 'clean-for-real'
It looks like I've been unwittingly breaking the build for different
packages even while focused on doing the opposite. Hopefully making it
easy to clean out temporary build files will help to prevent this.

--- a/js/package.json
+++ b/js/package.json
@@ -8,6 +8,8 @@
     "third_party/@types/*"
   ],
   "scripts": {
+    "clean": "git clean -nXd -e '!**/node_modules' -e '!**/node_modules/**'",
+    "clean-for-real": "git clean -fXd -e '!**/node_modules' -e '!**/node_modules/**'",
     "build": "lerna run build",
     "lint": "eslint 'packages/*/src/**/*.ts'",
     "fmt": "eslint 'packages/*/src/**/*.ts' --quiet --fix",
