tsc: Skip library checks and only emit declarations

--- a/js/packages/ui-quill-module/package.json
+++ b/js/packages/ui-quill-module/package.json
@@ -9,7 +9,7 @@
     "test": "polendina --cleanup src/**/*.spec.ts --webpack-config ../../webpack.test.js",
     "dev": "parcel src/index.ts",
     "build-parcel": "parcel build src/index.ts",
-    "build-tsc": "tsc -b tsconfig.json",
+    "build-tsc": "tsc --emitDeclarationOnly --skipLibCheck",
     "build": "yarn build-parcel && yarn build-tsc"
   },
   "devDependencies": {
