--- a/js/packages/api-textile/package.json
+++ b/js/packages/api-textile/package.json
@@ -10,7 +10,7 @@
     "test": "mocha src/**/*.spec.ts",
     "dev": "parcel src/index.ts",
     "build-parcel": "parcel build src/index.ts",
-    "build-tsc": "tsc -b tsconfig.json",
+    "build-tsc": "tsc --emitDeclarationOnly --skipLibCheck",
     "build": "yarn build-parcel && yarn build-tsc"
   },
   "devDependencies": {
