--- a/js/packages/ui-quill-module/package.json
+++ b/js/packages/ui-quill-module/package.json
@@ -17,7 +17,10 @@
     "@types/quill-delta": "^3.6.3",
     "chai": "^4.2.0",
     "husky": "^4.2.5",
+    "jsdom": "^16.2.2",
+    "jsdom-global": "^3.0.2",
     "mocha": "^7.1.2",
+    "mutationobserver-shim": "^0.3.5",
     "polendina": "^1.0.0",
     "typescript": "^3.8.3"
   },
