--- a/packages/nm_gql_go_link/example/pubspec.yaml
+++ b/packages/nm_gql_go_link/example/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
 
+  artemis:
+  json_serializable: ^3.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
