packages/nm_gql_go_link: support macos
The mobile apps were crashing without much diagnostics due to some bug.
I'm using an old MacBook for development right now, so this will help
with the code/test cycle.

--- a/packages/nm_gql_go_link/.gitignore
+++ b/packages/nm_gql_go_link/.gitignore
@@ -5,3 +5,7 @@
 .pub/
 build/
 ios/Frameworks/
+tmp
+macos/Frameworks/GoNmgql.framework/**/*.objc.h
+macos/Frameworks/GoNmgql.framework/**/ref.h
+macos/Frameworks/GoNmgql.framework/**/GoNmgql
