packages/nm_app: nm_gql_go_link & quilljs_webview
Include and (minimally) use the previously developed plugins.

--- a/packages/nm_app/pubspec.yaml
+++ b/packages/nm_app/pubspec.yaml
@@ -24,10 +24,15 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+
+  artemis:
+  nm_gql_go_link:
+    path: ../nm_gql_go_link
+  quilljs_webview:
+    path: ../quilljs_webview
 
 dev_dependencies:
   flutter_test:
