--- a/packages/nm_app/pubspec.yaml
+++ b/packages/nm_app/pubspec.yaml
@@ -33,6 +33,14 @@ dependencies:
     path: ../nm_gql_go_link
   quilljs_webview:
     path: ../quilljs_webview
+  zefyr:
+    path: ../../third_party/zefyr/packages/zefyr
+  notus:
+    path: ../../third_party/zefyr/packages/notus
+  nm_delta_notus:
+    path: ../nm_delta_notus
+  nm_delta:
+    path: ../nm_delta
 
 dev_dependencies:
   flutter_test:
