packages/nm_delta: more sync, less async
It may very well become useful or necessary to handle changes
asynchronously, but there's no need to force streams into the API so
early.

--- a/packages/nm_app/pubspec.yaml
+++ b/packages/nm_app/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
     path: ../nm_delta_notus
   nm_delta:
     path: ../nm_delta
+  logger: ^0.9.4
 
 dev_dependencies:
   flutter_test:
