--- a/packages/nm_delta_notus/pubspec.yaml
+++ b/packages/nm_delta_notus/pubspec.yaml
@@ -13,8 +13,8 @@ dependencies:
   notus:
     path: ../../third_party/zefyr/packages/notus
   uuid: ^2.2.2
+  logger: ^0.9.4
 
 dev_dependencies:
   pedantic: ^1.9.0
   test: ^1.14.4
-  async: ^2.4.2
