flutter: fix the build after change in path

--- a/.gpm.yaml
+++ b/.gpm.yaml
@@ -1,10 +1,10 @@
 packages:
-- path: packages/nm_delta
+- path: dart/nm_delta
   test:
     steps:
     - run: dart test --coverage=coverage
     - run: format_coverage --in=coverage --packages=.packages --report-on=lib --lcov --out=coverage.lcov
-- path: packages/nm_delta_notus
+- path: dart/nm_delta_notus
   test:
     steps:
     - run: dart test --coverage=coverage
