--- a/flutter/nm_gql_go_link/pubspec.yaml
+++ b/flutter/nm_gql_go_link/pubspec.yaml
@@ -1,7 +1,8 @@
 name: nm_gql_go_link
 description: A new flutter plugin project.
-version: 0.0.1
+version: 0.0.6
 homepage: https://github.com/google/note-maps/blob/main/packages/nm_gql_go_link
+publish_to: 'none'
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
