--- a/flutter/nm_gql_go_link/pubspec.yaml
+++ b/flutter/nm_gql_go_link/pubspec.yaml
@@ -21,6 +21,7 @@ dev_dependencies:
   artemis: '>=5.0.0 <6.0.0'
   build_runner: ^1.5.0
   json_serializable: ^3.0.0
+  pedantic: ^1.9.2
 
 flutter:
   plugin:
