--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@
 os:
 - linux
 
+dist: xenial
+
 addons:
   apt:
     packages:
@@ -33,7 +35,7 @@ before_cache:
 - mkdir -p $HOME/nix.store
 - nix copy --to file://$HOME/nix.store -f default.nix buildInputs nativeBuildInputs
 
-matrix:
+jobs:
   include:
   - language: go
     go:
