--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,9 @@ addons:
     packages:
     - lcov
 
+env:
+- GOMODCACHE: "${TRAVIS_BUILD_DIR}/tmp/go/mod"
+
 cache:
   directories:
   - $HOME/nix.store
@@ -30,6 +33,7 @@ before_install:
 - sudo mkdir -p /etc/nix
 - echo "substituters = https://cache.nixos.org/ file://$HOME/nix.store" | sudo tee -a /etc/nix/nix.conf > /dev/null
 - echo 'require-sigs = false' | sudo tee -a /etc/nix/nix.conf > /dev/null
+- cd "${TRAVIS_BUILD_DIR}" ; go mod download
 
 before_cache:
 - mkdir -p $HOME/nix.store
