--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,9 @@ before_install:
 - sudo mkdir -p /etc/nix
 - echo "substituters = https://cache.nixos.org/ file://$HOME/nix.store" | sudo tee -a /etc/nix/nix.conf > /dev/null
 - echo 'require-sigs = false' | sudo tee -a /etc/nix/nix.conf > /dev/null
-- cd "${TRAVIS_BUILD_DIR}" ; go mod download
+
+install:
+- nix-shell --run 'go mod download'
 
 before_cache:
 - mkdir -p $HOME/nix.store
