--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ before_install:
 - mkdir -p $PUBCACHE
 
 install:
-- nix-shell --run 'make download'
+- cd $TRAVIS_BUILD_DIR && nix-shell --run 'make download'
 
 before_cache:
 - mkdir -p $HOME/nix.store
