--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,10 @@ language: nix
 nix: 2.3.9
 
 env:
-- GOMODCACHE="$TRAVIS_BUILD_DIR/tmp/go/mod" PUBCACHE="$TRAVIS_BUILD_DIR/tmp/pub/cache"
+  global:
+  - GOCACHE="$TRAVIS_BUILD_DIR/tmp/go/cache"
+  - GOMODCACHE="$TRAVIS_BUILD_DIR/tmp/go/mod"
+  - PUBCACHE="$TRAVIS_BUILD_DIR/tmp/pub/cache"
 
 cache:
   directories:
@@ -29,11 +32,12 @@ before_install:
 - sudo mkdir -p /etc/nix
 - echo "substituters = https://cache.nixos.org/ file://$HOME/nix.store" | sudo tee -a /etc/nix/nix.conf > /dev/null
 - echo 'require-sigs = false' | sudo tee -a /etc/nix/nix.conf > /dev/null
+- mkdir -p $GOCACHE
 - mkdir -p $GOMODCACHE
 - mkdir -p $PUBCACHE
 
 install:
-- cd $TRAVIS_BUILD_DIR && nix-shell --run 'make download'
+- nix-shell --run 'make download'
 
 before_cache:
 - mkdir -p $HOME/nix.store
