build: step back and fix the build

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ env:
   global:
   - GOCACHE="$TRAVIS_BUILD_DIR/tmp/go/cache"
   - GOMODCACHE="$TRAVIS_BUILD_DIR/tmp/go/mod"
-  - PUBCACHE="$TRAVIS_BUILD_DIR/tmp/pub/cache"
+  - PUB_CACHE="$TRAVIS_BUILD_DIR/tmp/pub/cache"
 
 cache:
   directories:
@@ -34,11 +34,15 @@ before_install:
 - echo 'require-sigs = false' | sudo tee -a /etc/nix/nix.conf > /dev/null
 - mkdir -p $GOCACHE
 - mkdir -p $GOMODCACHE
-- mkdir -p $PUBCACHE
+- mkdir -p $PUB_CACHE
 - mkdir -p out/tmp
 
 install:
-- export GOCACHE GOMODCACHE PUBCACHE ; nix-shell --run 'make -j download'
+- export GOCACHE GOMODCACHE PUB_CACHE ; nix-shell --run 'make -j download'
+
+script:
+- nix-shell --run 'make -j lint test'
+- nix-shell --run 'make -j build'
 
 before_cache:
 - mkdir -p $HOME/nix.store
