--- a/.travis.yml
+++ b/.travis.yml
@@ -26,9 +26,10 @@ before_install:
 - sudo mkdir -p /etc/nix
 - echo "substituters = https://cache.nixos.org/ file://$HOME/nix.store" | sudo tee -a /etc/nix/nix.conf > /dev/null
 - echo 'require-sigs = false' | sudo tee -a /etc/nix/nix.conf > /dev/null
+- mkdir -p out/tmp # TODO: find out why this is necessary
 
 install:
-- nix-shell --run 'make -j download'
+- nix-shell --run 'make download'
 
 script:
 - nix-shell --run 'make -j lint test'
