--- a/.travis.yml
+++ b/.travis.yml
@@ -30,9 +30,9 @@ jobs:
     - echo 'require-sigs = false' | sudo tee -a /etc/nix/nix.conf > /dev/null
     - mkdir -p out/tmp
     install:
-    - unset GOROOT ; nix-shell --run 'make download'
+    - unset GOROOT ; nix-shell --run 'make -e download'
     script:
-    - unset GOROOT ; nix-shell --run 'make lint test build'
+    - unset GOROOT ; nix-shell --run 'make -e lint test build'
     before_cache:
     - mkdir -p $HOME/nix.store
     - nix copy --to file://$HOME/nix.store -f default.nix buildInputs nativeBuildInputs
@@ -43,6 +43,6 @@ jobs:
     before_install:
     - git clone -b 1.24.0-6.0.pre --depth 1 https://github.com/flutter/flutter.git $HOME/flutter
     install:
-    - make download
+    - make -e download
     script:
-    - make lint test build OUT=./result
+    - make -e lint test build OUT=./result
