--- a/.travis.yml
+++ b/.travis.yml
@@ -12,37 +12,21 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# Until travis-ci.org supports Nix on MacOS, we have to use separte jobs:
+language: generic
+
 jobs:
   include:
   - os: linux
     dist: xenial
-    language: nix
-    nix: 2.3.9
-    cache:
-      directories:
-      - $HOME/nix.store
-      - $HOME/.cache
-    before_install:
-    - sudo mkdir -p /etc/nix
-    - echo "substituters = https://cache.nixos.org/ file://$HOME/nix.store" | sudo tee -a /etc/nix/nix.conf > /dev/null
-    - echo 'require-sigs = false' | sudo tee -a /etc/nix/nix.conf > /dev/null
-    - mkdir -p out/tmp
-    install:
-    - unset GOROOT ; nix-shell --run 'make -e download'
-    script:
-    - unset GOROOT ; nix-shell --run 'make -e lint test build'
-    before_cache:
-    - mkdir -p $HOME/nix.store
-    - nix copy --to file://$HOME/nix.store -f default.nix buildInputs nativeBuildInputs
   - os: osx
     osx_image: xcode12.2
     language: generic
-    install:
-    - make -e download
-    script:
-    - make -e lint test build OUT=./result
+    addons:
+      homebrew:
+        packages:
+        - gnumake
 
-# Try to save build outputs somewhere:
-addons:
-  artifacts: true
+install:
+- gnumake -e download
+script:
+- gnumake -e lint test build
