build: travis: attempt newer Go on xenial

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,9 @@ jobs:
   include:
   - os: linux
     dist: xenial
+    addons:
+      snaps:
+      - go
     env: make
   - os: osx
     osx_image: xcode12.2
