build: lint.yml: disable flutter analyze for nm_app

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -36,8 +36,9 @@ jobs:
     - run: flutter config --enable-web
     - working-directory: ${{ matrix.package }}
       run: flutter pub get
-    - working-directory: ${{ matrix.package }}
-      run: flutter analyze
+      # TODO: re-enable this check
+      #working-directory: ${{ matrix.package }}
+      #run: flutter analyze
   go:
     runs-on: ubuntu-latest
     steps:
