--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -13,12 +13,12 @@ jobs:
     - uses: cachix/cachix-action@v8
       with:
         name: note-maps
-        authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-    - run: nix-shell --run 'echo nix-shell: OK'
-    - run: nix-shell --run 'make download'
-    - run: nix-shell --run 'make lint'
-    - run: nix-shell --run 'make test'
-    - run: nix-shell --run 'make build'
+        authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
+    - run: nix-shell --run "echo nix-shell OK"
+    - run: nix-shell --run "make download"
+    - run: nix-shell --run "make lint"
+    - run: nix-shell --run "make test"
+    - run: nix-shell --run "make build"
   lint:
     needs: download
     runs-on: ubuntu-latest
@@ -30,8 +30,8 @@ jobs:
     - uses: cachix/cachix-action@v8
       with:
         name: note-maps
-        authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-    - run: nix-shell --run 'make lint'
+        authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
+    - run: nix-shell --run "make lint"
   test:
     needs: download
     runs-on: ubuntu-latest
@@ -43,8 +43,8 @@ jobs:
     - uses: cachix/cachix-action@v8
       with:
         name: note-maps
-        authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-    - run: nix-shell --run 'make test'
+        authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
+    - run: nix-shell --run "make test"
   build:
     needs: download
     runs-on: ubuntu-latest
@@ -56,5 +56,5 @@ jobs:
     - uses: cachix/cachix-action@v8
       with:
         name: note-maps
-        authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-    - run: nix-shell --run 'make build'
+        authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
+    - run: nix-shell --run "make build"
