--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -29,7 +29,7 @@ jobs:
         name: note-maps
         authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
     - run: nix-shell --run "make download"
-    - run: nix-shell --run "make build"
+    - run: nix-shell --run "make build DEBUG="
     - uses: actions/upload-artifact@v2
       with:
         name: result
