--- a/fdroid/config.yml
+++ b/fdroid/config.yml
@@ -1,11 +1,4 @@
 ---
-# Copy this file to config.yml, then amend the settings below according to
-# your system configuration.
-
-# Custom path to the Android SDK, defaults to $ANDROID_HOME
-sdk_path: $ANDROID_HOME
-
-
 
 # Custom paths to various versions of the Android NDK, defaults to 'r12b' set
 # to $ANDROID_NDK. Most users will have the latest at $ANDROID_NDK, which is
@@ -53,13 +46,13 @@ sdk_path: $ANDROID_HOME
 # The same policy is applied to the archive repo, if there is one.
 # repo_maxage: 0
 
-repo_url: https://MyFirstFDroidRepo.org/fdroid/repo
-repo_name: My First F-Droid Repo Demo
+repo_url: https://note-maps-fdroid.web.app/fdroid/repo
+repo_name: Note Maps F-Droid Repo
 repo_icon: fdroid-icon.png
 repo_description: >-
   This is a repository of apps to be used with F-Droid. Applications in this
   repository are either official binaries built by the original application
-  developers, or are binaries built from source by the admin of f-droid.org
+  developers, or are binaries built from source by the admin of this repo
   using the tools on https://gitlab.com/u/fdroid.
 
 # As above, but for the archive repo.
@@ -67,31 +60,17 @@ repo_description: >-
 # older ones going to the archive. Set it to 0, and there will be no archive
 # repository, and no need to define the other archive_ values.
 archive_older: 3
-archive_url: https://f-droid.org/archive
-archive_name: My First F-Droid Archive Demo
+archive_url: https://note-maps-fdroid.web.app/archive
+archive_name: Note Maps F-Droid Archive
 archive_icon: fdroid-icon.png
 archive_description: >-
-  The repository of older versions of packages from the main demo repository.
-
-# This allows a specific kind of insecure APK to be included in the
-# 'repo' section.  Since April 2017, APK signatures that use MD5 are
-# no longer considered valid, jarsigner and apksigner will return an
-# error when verifying.  `fdroid update` will move APKs with these
-# disabled signatures to the archive.  This option stops that
-# behavior, and lets those APKs stay part of 'repo'.
-#
-# allow_disabled_algorithms: true
+  The repository of older versions of packages from the main repository.
 
 # Normally, all apps are collected into a single app repository, like on
 # https://f-droid.org. For certain situations, it is better to make a repo
 # that is made up of APKs only from a single app. For example, an automated
 # build server that publishes nightly builds.
 # per_app_repos: true
-
-# `fdroid update` will create a link to the current version of a given app.
-# This provides a static path to the current APK. To disable the creation of
-# this link, uncomment this:
-# make_current_version_link: false
 
 # By default, the "current version" link will be based on the "Name" of the
 # app from the metadata. You can change it to use a different field from the
@@ -109,8 +88,6 @@ archive_description: >-
 # jarsigner using -alias. (Not needed in an unsigned repository).
 repo_keyalias: 428878f9f82c
 
-
-
 # Optionally, the public key for the key defined by repo_keyalias above can
 # be specified here. There is no need to do this, as the public key can and
 # will be retrieved from the keystore when needed. However, specifying it
@@ -126,8 +103,6 @@ repo_keyalias: 428878f9f82c
 # smartcard based on 'smartcardoptions' below.
 keystore: keystore.p12
 
-
-
 # You should not need to change these at all, unless you have a very
 # customized setup for using smartcards in Java with keytool/jarsigner
 # smartcardoptions: |
@@ -141,19 +116,13 @@ keystore: keystore.p12
 # in text files!
 keystorepass: B6D15jRojhRoJexnUj+U3BHK2y+7Wm3kRtx/PGvYmkQ=
 
-
-
 # The password for keys - the same is used for each auto-generated key as well
 # as for the repository key. You should not normally store this password in a
 # file since it is a sensitive password.
 keypass: B6D15jRojhRoJexnUj+U3BHK2y+7Wm3kRtx/PGvYmkQ=
 
-
-
 # The distinguished name used for all keys.
 keydname: CN=428878f9f82c, OU=F-Droid
-
-
 
 # Use this to override the auto-generated key aliases with specific ones
 # for particular applications. Normally, just leave it empty.
@@ -180,7 +149,6 @@ keydname: CN=428878f9f82c, OU=F-Droid
 # serverwebroot:
 #   - foo.com:/usr/share/nginx/www/fdroid
 #   - bar.info:/var/www/fdroid
-
 
 # When running fdroid processes on a remote server, it is possible to
 # publish extra information about the status.  Each fdroid sub-command
@@ -227,7 +195,6 @@ keydname: CN=428878f9f82c, OU=F-Droid
 #
 # identity_file: ~/.ssh/fdroid_id_rsa
 
-
 # If you are running the repo signing process on a completely offline machine,
 # which provides the best security, then you can specify a folder to sync the
 # repo to when running `fdroid deploy`. This is most likely going to
@@ -238,14 +205,12 @@ keydname: CN=428878f9f82c, OU=F-Droid
 #
 # local_copy_dir: /media/MyUSBThumbDrive/fdroid
 
-
 # If you are using local_copy_dir on an offline build/signing server, once the
 # thumb drive has been plugged into the online machine, it will need to be
 # synced to the copy on the online machine. To make that happen
 # automatically, set sync_from_local_copy_dir to True:
 #
 # sync_from_local_copy_dir: true
-
 
 # To upload the repo to an Amazon S3 bucket using `fdroid server
 # update`.  Warning, this deletes and recreates the whole fdroid/
@@ -260,7 +225,6 @@ keydname: CN=428878f9f82c, OU=F-Droid
 # awsaccesskeyid: SEE0CHAITHEIMAUR2USA
 # awssecretkey: {env: awssecretkey}
 
-
 # If you want to force 'fdroid server' to use a non-standard serverwebroot.
 # This will allow you to have 'serverwebroot' entries which do not end in
 # '/fdroid'. (Please note that some client features expect repository URLs
@@ -268,11 +232,9 @@ keydname: CN=428878f9f82c, OU=F-Droid
 #
 # nonstandardwebroot: false
 
-
 # If you want to upload the release apk file to androidobservatory.org
 #
 # androidobservatory: false
-
 
 # If you want to upload the release apk file to virustotal.com
 # You have to enter your profile apikey to enable the upload.
@@ -282,7 +244,6 @@ keydname: CN=428878f9f82c, OU=F-Droid
 # Or get it from an environment variable:
 #
 # virustotal_apikey: {env: virustotal_apikey}
-
 
 # The build logs can be posted to a mediawiki instance, like on f-droid.org.
 # wiki_protocol: http
